# ultracontext

./: .env.example  .envrc.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: publish.yml  release.yml
apps/api/: .env.example  .gitignore  README.md  package.json  tsconfig.json  wrangler.jsonc
apps/api/scripts/: ultracontext-dev-key.sh
apps/api/src/: app.ts  config.node.ts  config.ts  constants.ts  db.ts  index.ts  server.ts  worker.ts
apps/daemon/: .env.example  README.md  package.json
apps/daemon/src/: Spinner.mjs  cache.mjs  codex-local-resume.mjs  ctl.mjs  daemon.mjs  env.mjs  index.mjs  launcher.mjs  lock.mjs  redis.mjs  sources.mjs  store.mjs  ui.mjs  utils.mjs  (+1 more)
apps/docs/: changelog.mdx  configuration.mdx  docs.json  index.mdx  quickstart.mdx  sdk.mdx
apps/js-sdk/: LICENSE  README.md  package.json  postinstall.mjs  tsconfig.json  tsdown.config.ts  ultracontext.mjs
apps/mcp-server/: package.json  tsconfig.json
apps/postgres/: .env.example  README.md  compose.yaml  init.sql
apps/python-sdk/: README.md  pyproject.toml
apps/redis/: README.md  docker-compose.yml
apps/switch-plugin/: marketplace.json
apps/sync/: package.json
apps/tui/: README.md  package.json
apps/ultracontext/: .env.example  README.md  package.json
npm/: install.mjs  test.mjs
prompts/: context-engineer.md
skills/ultracontext/: SKILL.md
src/: lib.rs  main.rs
src/prompts/: context-engineer.md  query.md
tests/: e2e.rs  real_e2e.rs
(+162 files in other folders)
